kube/deploy/services/vikunja/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &n vikunja
  namespace: *n
spec:
  routes:
    - match: Host(`do.${EXTERNAL_DOMAIN}`)
      kind: Rule
      services:
        - name: *n
          port: 3456
      middlewares:
        - name: compress
          namespace: ingress
  tls:
    secretName: tls-cert-do.${EXTERNAL_DOMAIN}
    domains:
      - main: do.${EXTERNAL_DOMAIN}
